--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <script src="script.js"></script>
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
-  <body>
+  <body styel=" margin: 0; padding: 0 ;">
     <div id="container">
     </div>
   </body>
